# mindtype-fast-sst

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
mindtype-rust/: Cargo.toml
mindtype-rust/crates/mindtype-app/: Cargo.toml
mindtype-rust/crates/mindtype-app/src/: app.rs  main.rs  messages.rs
mindtype-rust/crates/mindtype-app/src/theme/: mod.rs
mindtype-rust/crates/mindtype-app/src/ui/: components.rs  files_view.rs  main_view.rs  mod.rs  overlay.rs  settings_view.rs  wizard_view.rs
mindtype-rust/crates/mindtype-assistant/: Cargo.toml
mindtype-rust/crates/mindtype-assistant/src/: conversation.rs  error.rs  lib.rs  state.rs
mindtype-rust/crates/mindtype-core/: Cargo.toml
mindtype-rust/crates/mindtype-core/src/: audio.rs  config.rs  error.rs  file_processor.rs  lib.rs  transcription.rs
mindtype-rust/crates/mindtype-licensing/: Cargo.toml
mindtype-rust/crates/mindtype-licensing/src/: cache.rs  credits.rs  error.rs  lib.rs  manager.rs
mindtype-rust/crates/mindtype-llm/: Cargo.toml
mindtype-rust/crates/mindtype-llm/src/: anthropic.rs  error.rs  gemini.rs  lib.rs  mindtype_cloud.rs  ollama.rs  openai.rs  openrouter.rs  provider.rs  yandex.rs
mindtype-rust/crates/mindtype-platform/: Cargo.toml
mindtype-rust/crates/mindtype-platform/src/: error.rs  lib.rs  linux.rs  macos.rs  windows.rs
mindtype-rust/crates/mindtype-tauri/: Cargo.toml  tauri.conf.json
mindtype-rust/crates/mindtype-tauri/src/: commands.rs  crash_reporter.rs  hotkey.rs  lib.rs  main.rs  recording.rs  state.rs  tray.rs
mindtype-rust/crates/mindtype-tauri/src-ui/: index.html  overlay.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
mindtype-rust/crates/mindtype-tauri/src-ui/src/: App.svelte  main.ts  overlay.ts
mindtype-rust/crates/mindtype-tauri/src-ui/src/lib/components/: Button.svelte  ErrorBoundary.svelte  FilesTab.svelte  LicenseSettings.svelte  LlmSettings.svelte  ProgressBar.svelte  RadioButton.svelte  TabBar.svelte  TextField.svelte  TitleBar.svelte  Window.svelte
mindtype-rust/crates/mindtype-tauri/src-ui/src/lib/i18n/: de.json  en.json  es.json  fr.json  index.ts  ru.json  zh.json
mindtype-rust/crates/mindtype-tauri/src-ui/src/lib/stores/: index.ts
mindtype-rust/crates/mindtype-tauri/src-ui/src/lib/utils/: crashReporter.ts
mindtype-rust/crates/mindtype-tauri/src-ui/src/lib/views/: MainWindow.svelte  Overlay.svelte  OverlayApp.svelte  Wizard.svelte
mindtype-rust/crates/mindtype-tauri/src-ui/src/styles/: overlay.css  system7.css
mindtype-rust/crates/mindtype-tauri/src-ui/tests/: files.spec.ts  fixtures.ts  recording.spec.ts  settings.spec.ts  smoke.spec.ts  wizard.spec.ts
mindtype-rust/crates/mindtype-text-processor/: Cargo.toml
mindtype-rust/crates/mindtype-text-processor/src/: error.rs  fillers.rs  lib.rs  normalizer.rs
mindtype-rust/crates/mindtype-tts/: Cargo.toml
mindtype-rust/crates/mindtype-tts/src/: edge_tts.rs  error.rs  lib.rs  player.rs
mindtype-rust/crates/mindtype-whisper/: Cargo.toml
mindtype-rust/crates/mindtype-whisper/src/: error.rs  lib.rs  mel.rs  model.rs  tokenizer.rs  transcriber.rs
