[package]
name = "mindtype-core"
version.workspace = true
edition.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Audio
cpal = { workspace = true }
hound = { workspace = true }
symphonia = { version = "0.5", features = ["mp3", "aac", "alac", "ogg", "flac"] }
rubato = "0.15"  # For audio resampling

# Async
tokio = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
once_cell = { workspace = true }

# Internal crates
mindtype-whisper = { path = "../mindtype-whisper" }
mindtype-platform = { path = "../mindtype-platform" }
mindtype-licensing = { path = "../mindtype-licensing" }
mindtype-llm = { path = "../mindtype-llm" }

[dev-dependencies]
tokio-test = "0.4"
