[package]
name = "mindtype-licensing"
version.workspace = true
edition.workspace = true

[dependencies]
# HTTP
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

# Async
tokio = { workspace = true }

# Utilities
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
hostname = "0.4"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"
