[package]
name = "mindtype-platform"
version.workspace = true
edition.workspace = true

[dependencies]
# Async
tokio = { workspace = true }

# Crypto
sha2 = { workspace = true }

# Utilities
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
dbus = "0.9"

[dev-dependencies]
tokio-test = "0.4"
