[package]
name = "mindtype-whisper"
version.workspace = true
edition.workspace = true

[dependencies]
# ONNX Runtime
ort = { workspace = true }
ndarray = { workspace = true }

# Audio processing
hound = { workspace = true }

# FFT for mel spectrogram computation
rustfft = "6.2"

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dirs = "5"

[dev-dependencies]
tokio-test = "0.4"
